<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@color/bg_register"
            android:contextClickable="true"
            android:focusable="false"
            android:padding="8dp">

            <TextView
                android:id="@+id/Product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/productImage"
                android:text="@string/product_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Product"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/productImage"
                android:text="@string/shop_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Shop"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/productImage"
                android:text="@string/price" />

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/SpecialOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:text="@string/special_offers" />

            <Button
                android:id="@+id/deleteFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SpecialOffers"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:text="@string/fav_delete"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>